# Templates

CppTemplate/HelloWorld/: CMakeLists.txt
CppTemplate/HelloWorld/include/: hello.h
CppTemplate/HelloWorld/src/: hello.cpp
